made position of dropdown-wrapper relative to solve the dropdown visibility issue when scrolling

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -47,6 +47,11 @@ header .header-btn a:active{
 }
 
 /* login icon section */
+.dropdown-wrapper {
+    position: relative; /* Keep dropdown aligned with the icon and to
+    make sure you can scroll to dropdown menu */
+}
+
 
 /* This is the className of this header icon div inside header btn parent */
 .login-icon {
